--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "upload-files",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
+    "start": "nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
+    "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
